jena-shex/src/test/files/spec/negativeSyntax/predicate-literal.shex
# literal predicate
# source: turtle-syntax-bad-struct-05.ttl
<http://a.example/IssueShape> {
   "p1" .
}
